# cuda-stream-test

./: .gitignore  .gitmodules  README.md  matrixmul.cu  meson.build
.devcontainer/: Dockerfile  devcontainer.json  install_nsys.sh
scripts/: benchmark.sh  mps_benchmark.sh  mps_test.sh  nsight.sh  test_benchmark.sh
src/: cuda_utils.cpp  cuda_utils.h  launcher.cu  main.cpp  main.cu  matrixmul.cu  matrixmul.cuh  meson.build  test_cuda_utils.cpp  test_matrixmul.cpp  test_mps.cpp
